[project]
name = "yesnopy"
version = "0.0.3"
authors = [
  { name="Arnav Nagpure", email="arnav.n256@gmail.com" },
]
description = "Save time by automatically checking user decision input"
readme = "README.md"
requires-python = ">=3.5.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AN1001/yesnopy"
"Bug Tracker" = ""
